manifests/miniflux/miniflux/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: miniflux
  name: miniflux-svc
spec:
  selector:
    app: miniflux
  ports:
  - name: http
    port: 80
    targetPort: 8080
  type: ClusterIP
